fix: Cleanup of the webservlet startup code.